--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -289,16 +289,13 @@ body, html {
   margin-bottom: 0.6em;
 }
 
-.social-media-and-description {
-  margin: 8em 30% 4em auto;
-}
-
 .social-media-and-description .description {
   position: relative;
 }
 
 .social-media-and-description .description h1 {
   margin: 1rem 0;
+  max-width: 20em;
 }
 
 @media only screen and (max-width: 900px) {
@@ -316,6 +313,7 @@ body, html {
 .social-media-and-description .description h2 {
   font-weight: 500;
   margin: 0 0 2rem 0;
+  max-width: 28em;
 }
 
 @media only screen and (max-width: 900px) {
@@ -332,6 +330,8 @@ body, html {
 
 @media only screen and (max-width: 901px) {
   .social-media-and-description {
+    width: 80%;
+    margin: 2em auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -349,10 +349,14 @@ body, html {
         -ms-flex-align: start;
             align-items: flex-start;
   }
+  .social-media {
+    margin-top: 2rem;
+  }
 }
 
 @media only screen and (min-width: 901px) {
   .social-media-and-description {
+    margin: 8em 20% 4em auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
