--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -10,6 +10,18 @@ body, html{
     font-size: 16px;
 }
 
+.App{
+    height: 100vh;
+    min-height: 100vh;
+}
+
+.view{
+    min-height: 80%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .menu{
     max-width: 100%;
     height: 6em;
@@ -58,6 +70,19 @@ body, html{
             @include font-size( $dfm, $mfm );
         }
 
+}
+
+.footer{
+    max-width: 100%;
+    height: auto;
+    padding: 1em 0;
+    @include display-flex(column, center);
+    background-color: $base-color;
+    border-top: 2px black solid;
+        & p{
+            @include font-size($dfs, $mfs);
+            margin: 0.5em 0;
+        }
 }
 
 @media only screen and (max-width: 901px) {
