--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -360,7 +360,7 @@ body, html {
 
 @media only screen and (min-width: 900px) {
   .social-media-and-description .description h1 {
-    font-size: 2rem;
+    font-size: 2.6rem;
   }
 }
 
@@ -430,8 +430,30 @@ body, html {
 }
 
 @media only screen and (min-width: 901px) {
+  .clippy1 {
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
+            clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
+    background-color: #eebb391a;
+    position: absolute;
+    left: 10%;
+    width: 30em;
+    height: 30em;
+    top: 40%;
+    z-index: -5;
+  }
+  .clippy2 {
+    -webkit-clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
+            clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
+    background-color: #eebb391a;
+    position: absolute;
+    right: 10%;
+    width: 30em;
+    height: 30em;
+    top: 130%;
+    z-index: -5;
+  }
   .social-media-and-description {
-    margin: 8em auto 4em 20%;
+    margin: 8em 50% 8em auto;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
@@ -468,10 +490,86 @@ body, html {
     margin-right: auto;
   }
   .offer_in_homepage {
-    max-width: 25rem;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    margin-bottom: 10rem;
   }
-  .offer_in_homepage img {
+  .offer_in_homepage .image_holder {
+    max-width: 30rem;
+    height: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    position: relative;
+  }
+  .offer_in_homepage .image_holder img {
     max-width: 100%;
+    height: auto;
+    -webkit-box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+            box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+  }
+  .offer_in_homepage .image_holder::before {
+    content: "";
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    background-color: #EEBB39;
+    z-index: -4;
+  }
+  .offer_in_homepage p {
+    background-color: white;
+    padding: 1.5em;
+    max-width: 15em;
+    font-weight: 600;
+    font-size: 1.6rem;
+  }
+  .offer_in_homepage:nth-child(odd) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: reverse;
+        -ms-flex-direction: row-reverse;
+            flex-direction: row-reverse;
+  }
+  .offer_in_homepage:nth-child(odd) .image_holder::before {
+    right: 30%;
+    top: -10%;
+  }
+  .offer_in_homepage:nth-child(odd) .image_holder img {
+    -webkit-box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+            box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+  }
+  .offer_in_homepage:nth-child(odd) p {
+    margin-right: 1em;
+    text-align: right;
+  }
+  .offer_in_homepage:nth-child(even) {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .offer_in_homepage:nth-child(even) .image_holder::before {
+    left: 30%;
+    top: -10%;
+  }
+  .offer_in_homepage:nth-child(even) .image_holder img {
+    -webkit-box-shadow: -22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+            box-shadow: -22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+  }
+  .offer_in_homepage:nth-child(even) p {
+    margin-left: 1em;
   }
   .mobile_bg_container {
     display: none;
