--- a/public/styles/_burger.scss
+++ b/public/styles/_burger.scss
@@ -1,8 +1,8 @@
  
 .burgerek{
-    background-color: #3F3D56;
+    background-color: #000000;
     transition: all .4s linear;
-    min-width : 70%;
+    min-width : 100%;
     height: 100vh;
         height: calc(var(--vh, 1vh) * 100);
     display: flex;
@@ -26,7 +26,7 @@
 
 .display_off{
     position: fixed;
-    left: -75%;
+    left: -100%;
     top: 0;
 }
 
