--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,6 +29,9 @@ body, html {
   max-width: 100%;
   height: 6em;
   padding: 0;
+  top: 0;
+  position: -webkit-sticky;
+  position: sticky;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -44,6 +47,7 @@ body, html {
           flex-direction: row;
   background-color: #EEBB39;
   border-bottom: 2px black solid;
+  z-index: 999;
 }
 
 .menu .logo-container {
@@ -107,10 +111,10 @@ body, html {
 }
 
 .menu .burgerek {
-  background-color: #3F3D56;
+  background-color: #000000;
   -webkit-transition: all .4s linear;
   transition: all .4s linear;
-  min-width: 70%;
+  min-width: 100%;
   height: 100vh;
   height: calc(var(--vh, 1vh) * 100);
   display: -webkit-box;
@@ -151,7 +155,7 @@ body, html {
 
 .menu .display_off {
   position: fixed;
-  left: -75%;
+  left: -100%;
   top: 0;
 }
 
@@ -430,30 +434,26 @@ body, html {
 }
 
 @media only screen and (min-width: 901px) {
-  .clippy1 {
+  .clip {
     -webkit-clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
             clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
     background-color: #eebb391a;
     position: absolute;
-    left: 10%;
-    width: 30em;
-    height: 30em;
-    top: 40%;
+    width: 20em;
+    height: 20em;
+    position: absolute;
     z-index: -5;
+  }
+  .clippy1 {
+    left: 20%;
+    top: 50%;
   }
   .clippy2 {
-    -webkit-clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
-            clip-path: polygon(0% 0%, 0% 100%, 25% 100%, 25% 25%, 75% 25%, 75% 75%, 25% 75%, 25% 100%, 100% 100%, 100% 0%);
-    background-color: #eebb391a;
-    position: absolute;
     right: 10%;
-    width: 30em;
-    height: 30em;
     top: 130%;
-    z-index: -5;
   }
   .social-media-and-description {
-    margin: 8em 50% 8em auto;
+    margin: 8em auto 8em 10%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
