--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -26,9 +26,12 @@ body, html{
     max-width: 100%;
     height: 6em;
     padding: 0;
+    top: 0;
+    position: sticky;
     @include display-flex(row, space-between);
     background-color: $base-color;
     border-bottom: 2px black solid;
+    z-index: 999;
         .logo-container{
             height: 100%;
             width: auto;
