--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -3,7 +3,7 @@
 
 
 body, html{
-    height: 100%;
+    min-height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
@@ -11,8 +11,10 @@ body, html{
 }
 
 .App{
-    height: 100vh;
     min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .view{
