--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -54,6 +54,7 @@
         width: 100%;
         display: flex;
         justify-content: flex;
+        margin-top: 5em;
             & img{
                 max-width: 100%;
             }
