--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,13 +1,17 @@
 body, html {
-  min-height: 100%;
   margin: 0;
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
+  height: 100%;
+}
+
+#root {
+  height: 100%;
 }
 
 .App {
-  min-height: 100vh;
+  min-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -21,7 +25,8 @@ body, html {
 }
 
 .view {
-  min-height: 80%;
+  height: auto;
+  min-height: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -442,6 +447,7 @@ body, html {
     -webkit-box-pack: flex;
         -ms-flex-pack: flex;
             justify-content: flex;
+    margin-top: 5em;
   }
   .mobile_bg_container img {
     max-width: 100%;
