--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -3,22 +3,27 @@
 
 
 body, html{
-    min-height: 100%;
     margin: 0;
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
+    height: 100%;
+}
+
+#root{
+    height: 100%;
 }
 
 .App{
-    min-height: 100vh;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
 .view{
-    min-height: 80%;
+    height: auto;
+    min-height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
