--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -10,23 +10,10 @@ body, html {
   height: 100%;
 }
 
-.App {
-  min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-}
-
 .view {
   height: auto;
   min-height: 100%;
+  width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -39,8 +26,26 @@ body, html {
           justify-content: space-between;
 }
 
+.App {
+  min-height: 100%;
+  min-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
 .menu {
-  max-width: 100%;
+  width: 100%;
   height: 6em;
   padding: 0;
   top: 0;
@@ -268,7 +273,7 @@ body, html {
 }
 
 .footer {
-  max-width: 100%;
+  width: 100%;
   height: auto;
   padding: 1em 0;
   display: -webkit-box;
@@ -378,7 +383,7 @@ body, html {
 
 @media only screen and (max-width: 900px) {
   .social-media-and-description .description h1 {
-    font-size: 1.2rem;
+    font-size: 1.4rem;
   }
 }
 
@@ -551,11 +556,21 @@ body, html {
     z-index: -4;
   }
   .offer_in_homepage p {
-    background-color: white;
     padding: 1em;
     max-width: 15em;
     font-weight: 600;
     font-size: 1.6rem;
+    position: relative;
+    z-index: 1;
+  }
+  .offer_in_homepage p span {
+    height: 100%;
+    width: 3.3em;
+    display: block;
+    position: absolute;
+    top: 0;
+    background-color: white;
+    z-index: -1;
   }
   .offer_in_homepage:nth-child(odd) {
     -webkit-box-orient: horizontal;
@@ -575,6 +590,9 @@ body, html {
     margin-right: 1em;
     text-align: right;
   }
+  .offer_in_homepage:nth-child(odd) p span {
+    right: 0;
+  }
   .offer_in_homepage:nth-child(even) {
     -webkit-box-orient: horizontal;
     -webkit-box-direction: normal;
@@ -591,6 +609,9 @@ body, html {
   }
   .offer_in_homepage:nth-child(even) p {
     margin-left: 1em;
+  }
+  .offer_in_homepage:nth-child(even) p span {
+    left: 0;
   }
   .mobile_bg_container {
     display: none;
@@ -633,6 +654,169 @@ body, html {
   }
   .offer_in_homepage p {
     padding: 1.5em;
+  }
+  .offer_in_homepage p span {
+    width: 4.7em;
+  }
+}
+
+.offers_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  width: auto;
+}
+
+.offers_container form {
+  position: relative;
+}
+
+.offers_container form .category_plate {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  cursor: pointer;
+  border: 2px black solid;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  position: relative;
+  background-color: white;
+}
+
+.offers_container form .category_plate::after {
+  content: "";
+  background-color: #EEBB39;
+  width: 100%;
+  height: 100%;
+  top: -7px;
+  left: -7px;
+  position: absolute;
+  z-index: -1;
+}
+
+.offers_container form .category_plate i {
+  -webkit-transition: 200ms linear;
+  transition: 200ms linear;
+}
+
+.offers_container form .category_plate i.true {
+  -webkit-transform: rotate(180deg);
+          transform: rotate(180deg);
+}
+
+.offers_container form div {
+  position: absolute;
+  width: 100%;
+  overflow-y: scroll;
+  display: none;
+  top: 0;
+  opacity: 0;
+  -webkit-transition: all 0.4s;
+  transition: all 0.4s;
+  overflow: hidden;
+  max-height: 0;
+  display: block;
+}
+
+.offers_container form div label {
+  max-width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  position: relative;
+  padding: 1em;
+  background-color: white;
+}
+
+.offers_container form div label:hover {
+  background-color: rgba(160, 150, 14, 0.158);
+}
+
+.offers_container form div label input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+  margin: 0;
+}
+
+.offers_container form div.true {
+  max-height: 300px;
+  opacity: 1;
+  overflow-y: scroll;
+}
+
+.offers_container form div.true::-webkit-scrollbar {
+  width: 0.5em;
+  height: 0.5em;
+}
+
+.offers_container form div.true::-webkit-scrollbar-thumb {
+  background-color: #EEBB39;
+}
+
+@media only screen and (max-width: 901px) {
+  .category_plate_options {
+    margin-top: 3rem;
+  }
+  .category_plate_options label {
+    min-height: 2em;
+  }
+  .category_plate {
+    width: 9em;
+    height: 3em;
+  }
+  .category_font {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (min-width: 901px) {
+  .category_plate_options {
+    margin-top: 4rem;
+  }
+  .category_plate_options label {
+    min-height: 2em;
+  }
+  .category_plate {
+    width: 12em;
+    height: 4em;
+  }
+  .category_font {
+    font-size: 1rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
