--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -14,23 +14,26 @@ body, html{
     height: 100%;
 }
 
-.App{
-    min-height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
-
 .view{
     height: auto;
     min-height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 }
 
-.menu{
-    max-width: 100%;
+.App{
+    min-height: 100%;
+    min-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.menu{  
+    width: 100%;
     height: 6em;
     padding: 0;
     top: 0;
@@ -83,7 +86,7 @@ body, html{
 }
 
 .footer{
-    max-width: 100%;
+    width: 100%;
     height: auto;
     padding: 1em 0;
     @include display-flex(column, center);
@@ -124,3 +127,4 @@ body, html{
 }
 
 @import './home';
+@import './custom-select';
