--- a/public/styles/_custom-select.scss
+++ b/public/styles/_custom-select.scss
@@ -1,10 +1,8 @@
 @import './functions';
 @import './utilities';
 
-.offers_container{
-    @include display-flex( column, center );
-    width: auto;
-    form{
+
+    .custom_select{
         position: relative;
             & .category_plate{
                 margin: 0;
@@ -74,8 +72,8 @@
                 opacity: 1;
                 overflow-y: scroll;
                 &::-webkit-scrollbar {
-                    width: 0.5em;
-                    height: 0.5em;
+                    width: 0.3em;
+                    height: 0.3em;
                    }
                    &::-webkit-scrollbar-thumb {
                     background-color: $base-color;
@@ -86,18 +84,16 @@
         }
 
 
-}
-
 @media only screen and (max-width: 901px) {
     .category_plate_options{
-        margin-top: 3rem;
+        margin-top: 4rem;
             & label {
                 min-height: 2em;
             }
     }
     .category_plate{
-        width: 9em;
-        height: 3em;
+        width: 8em;
+        height: 2.5em;
     }
     .category_font{
         font-size: $dfs;
@@ -106,14 +102,14 @@
 
 @media only screen and (min-width: 901px) {
     .category_plate_options{
-        margin-top: 4rem;
+        margin-top: 5rem;
             & label {
                 min-height: 2em;
             }
     }
     .category_plate{
-        width: 12em;
-        height: 4em;
+        width: 11em;
+        height: 3em;
     }
     .category_font{
         font-size: $mfs;
