--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -3,14 +3,16 @@ body, html {
   padding: 0;
   font-family: 'Montserrat', sans-serif;
   font-size: 16px;
-  height: 100%;
+  min-height: 100%;
+  position: relative;
 }
 
 #root {
+  min-height: 100%;
   height: 100%;
 }
 
-.view {
+.home_container {
   height: auto;
   min-height: 100%;
   width: 100%;
@@ -27,21 +29,8 @@ body, html {
 }
 
 .App {
-  min-height: 100%;
   min-width: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  -webkit-box-pack: justify;
-      -ms-flex-pack: justify;
-          justify-content: space-between;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
+  margin-top: 6em;
 }
 
 .menu {
@@ -49,8 +38,7 @@ body, html {
   height: 6em;
   padding: 0;
   top: 0;
-  position: -webkit-sticky;
-  position: sticky;
+  position: fixed;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -472,11 +460,11 @@ body, html {
   }
   .clippy1 {
     left: 20%;
-    top: 50%;
+    top: 30%;
   }
   .clippy2 {
     right: 10%;
-    top: 130%;
+    top: 50%;
   }
   .social-media-and-description {
     margin: 5em auto 5em 14%;
@@ -660,28 +648,11 @@ body, html {
   }
 }
 
-.offers_container {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
-  -webkit-box-align: center;
-      -ms-flex-align: center;
-          align-items: center;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-      -ms-flex-direction: column;
-          flex-direction: column;
-  width: auto;
-}
-
-.offers_container form {
+.custom_select {
   position: relative;
 }
 
-.offers_container form .category_plate {
+.custom_select .category_plate {
   margin: 0;
   padding: 0;
   border: 0;
@@ -706,7 +677,7 @@ body, html {
   background-color: white;
 }
 
-.offers_container form .category_plate::after {
+.custom_select .category_plate::after {
   content: "";
   background-color: #EEBB39;
   width: 100%;
@@ -717,17 +688,17 @@ body, html {
   z-index: -1;
 }
 
-.offers_container form .category_plate i {
+.custom_select .category_plate i {
   -webkit-transition: 200ms linear;
   transition: 200ms linear;
 }
 
-.offers_container form .category_plate i.true {
+.custom_select .category_plate i.true {
   -webkit-transform: rotate(180deg);
           transform: rotate(180deg);
 }
 
-.offers_container form div {
+.custom_select div {
   position: absolute;
   width: 100%;
   overflow-y: scroll;
@@ -741,7 +712,7 @@ body, html {
   display: block;
 }
 
-.offers_container form div label {
+.custom_select div label {
   max-width: 100%;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -761,11 +732,11 @@ body, html {
   background-color: white;
 }
 
-.offers_container form div label:hover {
+.custom_select div label:hover {
   background-color: rgba(160, 150, 14, 0.158);
 }
 
-.offers_container form div label input {
+.custom_select div label input {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -773,31 +744,31 @@ body, html {
   margin: 0;
 }
 
-.offers_container form div.true {
+.custom_select div.true {
   max-height: 300px;
   opacity: 1;
   overflow-y: scroll;
 }
 
-.offers_container form div.true::-webkit-scrollbar {
-  width: 0.5em;
-  height: 0.5em;
+.custom_select div.true::-webkit-scrollbar {
+  width: 0.3em;
+  height: 0.3em;
 }
 
-.offers_container form div.true::-webkit-scrollbar-thumb {
+.custom_select div.true::-webkit-scrollbar-thumb {
   background-color: #EEBB39;
 }
 
 @media only screen and (max-width: 901px) {
   .category_plate_options {
-    margin-top: 3rem;
+    margin-top: 4rem;
   }
   .category_plate_options label {
     min-height: 2em;
   }
   .category_plate {
-    width: 9em;
-    height: 3em;
+    width: 8em;
+    height: 2.5em;
   }
   .category_font {
     font-size: 0.8rem;
@@ -806,17 +777,80 @@ body, html {
 
 @media only screen and (min-width: 901px) {
   .category_plate_options {
-    margin-top: 4rem;
+    margin-top: 5rem;
   }
   .category_plate_options label {
     min-height: 2em;
   }
   .category_plate {
-    width: 12em;
-    height: 4em;
+    width: 11em;
+    height: 3em;
   }
   .category_font {
     font-size: 1rem;
   }
+}
+
+.offers_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  min-height: calc(100vh - 11.6em);
+  max-width: 80%;
+  margin: 0 auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.offers_container .category_button {
+  margin: 6em 0;
+}
+
+@media only screen and (max-width: 901px) {
+  .offers_container .category_button {
+    margin: 3em 0;
+  }
+}
+
+@media only screen and (min-width: 901px) {
+  .offers_container .category_button {
+    margin: 6em 0;
+  }
+}
+
+.contact_container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: start;
+      -ms-flex-pack: start;
+          justify-content: flex-start;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  min-height: calc(100vh - 11.6em);
+  max-width: 100%;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
 }
 /*# sourceMappingURL=main.css.map */
