--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -7,14 +7,16 @@ body, html{
     padding: 0;
     font-family: 'Montserrat', sans-serif;
     font-size: 16px;
-    height: 100%;
+    min-height: 100%;
+    position: relative;
 }
 
 #root{
+    min-height: 100%;
     height: 100%;
 }
 
-.view{
+.home_container{
     height: auto;
     min-height: 100%;
     width: 100%;
@@ -24,12 +26,8 @@ body, html{
 }
 
 .App{
-    min-height: 100%;
     min-width: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    margin-top: 6em;
 }
 
 .menu{  
@@ -37,7 +35,7 @@ body, html{
     height: 6em;
     padding: 0;
     top: 0;
-    position: sticky;
+    position: fixed;
     @include display-flex(row, space-between);
     background-color: $base-color;
     border-bottom: 2px black solid;
@@ -128,3 +126,5 @@ body, html{
 
 @import './home';
 @import './custom-select';
+@import './offers';
+@import './contact';
