Grid for products

--- a/public/styles/_utilities.scss
+++ b/public/styles/_utilities.scss
@@ -2,9 +2,10 @@ $base-color: #EEBB39;
 
 $dfs: 0.8rem;
 $dfm: 1rem;
+$dfmx2: 1.2rem;
 $dfb: 1.4rem;
 
 $mfs: 1rem;
 $mfm: 1.2rem;
-$mfmx2: 1.6rem;
+$mfmx2: 1.4rem;
 $mfb: 2.6rem;
