--- a/public/styles/_custom-select.scss
+++ b/public/styles/_custom-select.scss
@@ -54,7 +54,7 @@
                         padding: 1em;
                         background-color: white;
                             &:hover{
-                                background-color: rgba(160, 150, 14, 0.158);
+                                background-color: rgb(255, 251, 195);
                             }
 
                             & input{
