--- a/public/styles/_offers.scss
+++ b/public/styles/_offers.scss
@@ -10,6 +10,23 @@
             margin: 6em 0;
         }
 
+        & .offers{
+            display: grid;
+            grid-template-columns: repeat( auto-fill, minmax( 16em, 1fr ) );
+            grid-template-rows: auto;
+            grid-gap: 2em;
+            width: 100%;
+            max-width: 100%;
+                & div {
+                        & span {
+                             & img{
+                                 max-width: 100%;
+                                 min-width: 100%;
+                             }
+                        }
+                }
+        }
+
 }
 
 
