--- a/public/styles/_custom-select.scss
+++ b/public/styles/_custom-select.scss
@@ -38,7 +38,7 @@
         
             & div {
                 position: absolute;
-                width: 100%;
+                width: 16em;
                 overflow-y: scroll;
                 display: none;
                 top: 0;
@@ -47,6 +47,9 @@
                 overflow: hidden;
                 max-height: 0;
                 display: block;
+                z-index: 888;
+                border: #f1f1f1 2px solid;
+                border-right: none;
                     & label{
                         max-width: 100%;
                         @include display-flex( row, space-between);
@@ -72,12 +75,15 @@
                 opacity: 1;
                 overflow-y: scroll;
                 &::-webkit-scrollbar {
-                    width: 0.3em;
-                    height: 0.3em;
+                    width: 0.4em;
+                    height: 0.4em;
                    }
                    &::-webkit-scrollbar-thumb {
                     background-color: $base-color;
                    }
+                   &::-webkit-scrollbar-track {
+                    background: #f1f1f1;
+                  }
                 
             }
 
@@ -96,7 +102,7 @@
         height: 2.5em;
     }
     .category_font{
-        font-size: $dfs;
+        font-size: $dfm;
     }    
 }
 
@@ -112,6 +118,6 @@
         height: 3em;
     }
     .category_font{
-        font-size: $mfs;
+        font-size: $mfm;
     }
 }
