--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -700,7 +700,7 @@ body, html {
 
 .custom_select div {
   position: absolute;
-  width: 100%;
+  width: 16em;
   overflow-y: scroll;
   display: none;
   top: 0;
@@ -710,6 +710,9 @@ body, html {
   overflow: hidden;
   max-height: 0;
   display: block;
+  z-index: 888;
+  border: #f1f1f1 2px solid;
+  border-right: none;
 }
 
 .custom_select div label {
@@ -751,12 +754,16 @@ body, html {
 }
 
 .custom_select div.true::-webkit-scrollbar {
-  width: 0.3em;
-  height: 0.3em;
+  width: 0.4em;
+  height: 0.4em;
 }
 
 .custom_select div.true::-webkit-scrollbar-thumb {
   background-color: #EEBB39;
+}
+
+.custom_select div.true::-webkit-scrollbar-track {
+  background: #f1f1f1;
 }
 
 @media only screen and (max-width: 901px) {
@@ -771,7 +778,7 @@ body, html {
     height: 2.5em;
   }
   .category_font {
-    font-size: 0.8rem;
+    font-size: 1rem;
   }
 }
 
@@ -787,7 +794,7 @@ body, html {
     height: 3em;
   }
   .category_font {
-    font-size: 1rem;
+    font-size: 1.2rem;
   }
 }
 
@@ -831,20 +838,179 @@ body, html {
   max-width: 100%;
 }
 
+.offers_container .offers div {
+  border: black 2px solid;
+}
+
+.offers_container .offers div span {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.offers_container .offers div span span div {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #EEBB39;
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite;
+  /* Safari */
+  animation: spin 2s linear infinite;
+}
+
+.offers_container .offers div span span.true {
+  position: absolute;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  width: 100%;
+  height: 12em;
+  background-color: white;
+  -webkit-transition: opacity 300ms linear;
+  transition: opacity 300ms linear;
+  opacity: 1;
+}
+
+.offers_container .offers div span span.false {
+  opacity: 0;
+  display: none;
+}
+
 .offers_container .offers div span img {
   max-width: 100%;
   min-width: 100%;
+  -webkit-transition: opacity 500ms linear;
+  transition: opacity 500ms linear;
+}
+
+.offers_container .offers div span img.true {
+  opacity: 0;
+  height: 12em;
+}
+
+.offers_container .offers div span img.false {
+  opacity: 1;
+  height: auto;
+}
+
+.offers_container .offers div .product_name_price {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  border-top: black 2px solid;
+  background-color: white;
+}
+
+.offers_container .offers div .product_name_price p:nth-child(1) {
+  margin-bottom: 0;
+  font-weight: 600;
+}
+
+@media only screen and (max-width: 900px) {
+  .offers_container .offers div .product_name_price p:nth-child(1) {
+    font-size: 1rem;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .offers_container .offers div .product_name_price p:nth-child(1) {
+    font-size: 1.2rem;
+  }
+}
+
+.offers_container .offers div .product_name_price p:nth-child(2) {
+  font-weight: 500;
+}
+
+@media only screen and (max-width: 900px) {
+  .offers_container .offers div .product_name_price p:nth-child(2) {
+    font-size: 0.8rem;
+  }
+}
+
+@media only screen and (min-width: 900px) {
+  .offers_container .offers div .product_name_price p:nth-child(2) {
+    font-size: 1rem;
+  }
+}
+
+.ornament {
+  position: fixed;
+  top: 30%;
+  -webkit-transform: rotate(135deg);
+          transform: rotate(135deg);
+  background-image: url("../images/backgr.jpg");
+  background-position: 100% 100%;
+  background-size: 100%;
+  z-index: -5;
+  opacity: 0.16;
+}
+
+@-webkit-keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
+@keyframes spin {
+  0% {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg);
+  }
+  100% {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg);
+  }
 }
 
 @media only screen and (max-width: 901px) {
   .offers_container .category_button {
     margin: 3em 0;
   }
+  .offers {
+    margin-bottom: 3em;
+  }
+  .ornament {
+    display: none;
+  }
 }
 
 @media only screen and (min-width: 901px) {
   .offers_container .category_button {
     margin: 6em 0;
+  }
+  .offers {
+    margin-bottom: 6em;
+  }
+  .ornament {
+    width: 30em;
+    height: 30em;
+    right: -21em;
   }
 }
 
