--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -57,6 +57,15 @@
         margin-top: 5em;
             & img{
                 max-width: 100%;
+                transition: opacity 300ms linear;
+            }
+            & img.true{
+                height: 30em;
+                opacity: 0;
+            }
+            & img.false{
+                opacity: 1;
+                height: auto;
             }
     }
 }
@@ -116,10 +125,43 @@
                 justify-content: center;
                 align-items: center;
                 position: relative;
+                    & span{
+                        position: absolute;
+                        & div {
+                            border: 5px solid #f3f3f3;
+                            border-radius: 50%;
+                            border-top: 5px solid $base-color;
+                            width: 50px;
+                            height: 50px;
+                            -webkit-animation: spin 2s linear infinite; /* Safari */
+                            animation: spin 2s linear infinite;
+                        }
+                    }
+                    & span.true{
+                        position: absolute;
+                        @include display-flex(row, center);
+                        width: 100%;
+                        height: 12em;
+                        background-color: white;
+                        transition: opacity 300ms linear;
+                        opacity: 1;
+                    }
+                    & span.false{
+                        opacity: 0;
+                        display: none;
+                    }
                     & img {
                         max-width: 100%;
                         height: auto;
                         box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+                    }
+                    & img.true{
+                        opacity: 0;
+                        height: 20em;
+                    }
+                    & img.false{
+                        opacity: 1;
+                        height: auto;
                     }
                     &::before{
                         content: "";
