--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -444,6 +444,16 @@ body, html {
   }
   .mobile_bg_container img {
     max-width: 100%;
+    -webkit-transition: opacity 300ms linear;
+    transition: opacity 300ms linear;
+  }
+  .mobile_bg_container img.true {
+    height: 30em;
+    opacity: 0;
+  }
+  .mobile_bg_container img.false {
+    opacity: 1;
+    height: auto;
   }
 }
 
@@ -529,11 +539,58 @@ body, html {
             align-items: center;
     position: relative;
   }
+  .offer_in_homepage .image_holder span {
+    position: absolute;
+  }
+  .offer_in_homepage .image_holder span div {
+    border: 5px solid #f3f3f3;
+    border-radius: 50%;
+    border-top: 5px solid #EEBB39;
+    width: 50px;
+    height: 50px;
+    -webkit-animation: spin 2s linear infinite;
+    /* Safari */
+    animation: spin 2s linear infinite;
+  }
+  .offer_in_homepage .image_holder span.true {
+    position: absolute;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+    width: 100%;
+    height: 12em;
+    background-color: white;
+    -webkit-transition: opacity 300ms linear;
+    transition: opacity 300ms linear;
+    opacity: 1;
+  }
+  .offer_in_homepage .image_holder span.false {
+    opacity: 0;
+    display: none;
+  }
   .offer_in_homepage .image_holder img {
     max-width: 100%;
     height: auto;
     -webkit-box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
             box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
+  }
+  .offer_in_homepage .image_holder img.true {
+    opacity: 0;
+    height: 20em;
+  }
+  .offer_in_homepage .image_holder img.false {
+    opacity: 1;
+    height: auto;
   }
   .offer_in_homepage .image_holder::before {
     content: "";
@@ -958,14 +1015,15 @@ body, html {
 
 .ornament {
   position: fixed;
-  top: 30%;
-  -webkit-transform: rotate(135deg);
-          transform: rotate(135deg);
   background-image: url("../images/backgr.jpg");
+  background-repeat: no-repeat;
   background-position: 100% 100%;
   background-size: 100%;
   z-index: -5;
-  opacity: 0.16;
+  opacity: 0.3;
+  bottom: 0;
+  -webkit-transform: rotate(-45deg);
+          transform: rotate(-45deg);
 }
 
 @-webkit-keyframes spin {
@@ -996,7 +1054,9 @@ body, html {
     margin-bottom: 3em;
   }
   .ornament {
-    display: none;
+    width: 20em;
+    height: 20em;
+    right: -6em;
   }
 }
 
@@ -1010,7 +1070,7 @@ body, html {
   .ornament {
     width: 30em;
     height: 30em;
-    right: -21em;
+    right: -7em;
   }
 }
 
