--- a/public/styles/_home.scss
+++ b/public/styles/_home.scss
@@ -1,6 +1,48 @@
 @import './functions';
 @import './utilities';
 
+.image_test{
+    height: auto;
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    position: relative;
+    min-height: calc(100vh - 11.6em);;
+         & div{
+            height: 100%;
+            width: 100%;
+            position: absolute;
+            @include display-flex(row, center);
+                & span {
+                        border: 5px solid #f3f3f3;
+                        border-radius: 50%;
+                        border-top: 5px solid $base-color;
+                        width: 90px;
+                        height: 90px;
+                        -webkit-animation: spin 2s linear infinite; /* Safari */
+                        animation: spin 2s linear infinite;
+                }
+            }
+        & .hide{
+            width: 0;
+            height: 0;
+            opacity: 0;
+            display: none;
+            }
+}
+
+@-webkit-keyframes spin {
+    0% { -webkit-transform: rotate(0deg); }
+    100% { -webkit-transform: rotate(360deg); }
+  }
+  
+  @keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
 .social-media{
     @include display-flex(column, center);
     margin-right: 2rem;
@@ -57,15 +99,6 @@
         margin-top: 5em;
             & img{
                 max-width: 100%;
-                transition: opacity 300ms linear;
-            }
-            & img.true{
-                height: 30em;
-                opacity: 0;
-            }
-            & img.false{
-                opacity: 1;
-                height: auto;
             }
     }
 }
@@ -125,43 +158,10 @@
                 justify-content: center;
                 align-items: center;
                 position: relative;
-                    & span{
-                        position: absolute;
-                        & div {
-                            border: 5px solid #f3f3f3;
-                            border-radius: 50%;
-                            border-top: 5px solid $base-color;
-                            width: 50px;
-                            height: 50px;
-                            -webkit-animation: spin 2s linear infinite; /* Safari */
-                            animation: spin 2s linear infinite;
-                        }
-                    }
-                    & span.true{
-                        position: absolute;
-                        @include display-flex(row, center);
-                        width: 100%;
-                        height: 12em;
-                        background-color: white;
-                        transition: opacity 300ms linear;
-                        opacity: 1;
-                    }
-                    & span.false{
-                        opacity: 0;
-                        display: none;
-                    }
                     & img {
                         max-width: 100%;
                         height: auto;
                         box-shadow: 22px 22px 5px -10px rgba(0, 0, 0, 0.336);
-                    }
-                    & img.true{
-                        opacity: 0;
-                        height: 20em;
-                    }
-                    & img.false{
-                        opacity: 1;
-                        height: auto;
                     }
                     &::before{
                         content: "";
